hphp/hack/test/typecheck/self_trait_abstract_call.php.exp
File "self_trait_abstract_call.php", line 8, characters 11-11:
Cannot call self::f(); it is abstract. Did you mean static::f()? (Typing[4073])
File "self_trait_abstract_call.php", line 5, characters 35-35:
Declaration is here
