hphp/hack/test/typecheck/self_trait_abstract_call.php
<?hh // strict

trait Tr {

  public abstract static function f(): void;

  protected function g(): void {
    self::f();
  }
}
